kubernetes/notification-service.deploy.yaml
# Deployment for the PostgreSQL instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1 # Number of pod replicas
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: tunvx/simple-bank-notification-service:v0.0.1 # Dockerhub container image
          ports:
            - containerPort: 8080 # Container port HTTP to expose
            - containerPort: 8090 # Container port GRPC to expose
          volumeMounts:
            - name: notification-service-log
              mountPath: /var/log # Log files volume mount
          command:
            [
              "/app/wait-for.sh",
              "redis:6379",
              "postgres01:5432",
              "--",
              "/app/start.sh",
            ]
          args: ["/app/main"] # Command to execute the main application
          resources:
            requests:
              cpu: "0.5" # Requested CPU for the container
              memory: "512Mi" # Requested memory for the container
            limits:
              cpu: "0.5" # Limit of CPU for the container
              memory: "512Mi" # Limit of memory for the container
      volumes:
        - name: notification-service-log
          persistentVolumeClaim:
            claimName: notification-service-pvc # Claim the PVC for the deployment
