kubernetes/postgres01.deploy.yaml
# Deployment for the PostgreSQL instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres01
  labels:
    app: postgres01
spec:
  replicas: 1 # Number of pod replicas
  selector:
    matchLabels:
      app: postgres01
  template:
    metadata:
      labels:
        app: postgres01
    spec:
      containers:
        - name: postgres01
          image: postgres:17.0-alpine3.20 # PostgreSQL container image
          ports:
            - containerPort: 5432 # Container port to expose
          volumeMounts:
            - mountPath: /var/lib/postgresql/data # Path in the container where data will be stored
              name: postgres01-volume
          resources:
            requests:
              cpu: "2" # Requested CPU for the container
              memory: "4Gi" # Requested memory for the container
            limits:
              cpu: "4" # Limit of CPU for the container
              memory: "8Gi" # Limit of memory for the container
      volumes:
        - name: postgres01-volume
          persistentVolumeClaim:
            claimName: postgres01-pvc # Claim the PVC for the deployment
