kubernetes/redis.deploy.yaml
# Deployment for the Redis instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1 # Number of pod replicas
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.4-alpine3.20 # Redis container image
          ports:
            - containerPort: 6379 # Container port to expose
          volumeMounts:
            - mountPath: /data # Path in the container where data will be stored
              name: redis-volume
          resources:
            requests:
              cpu: "1" # Requested CPU for the container
              memory: "2Gi" # Requested memory for the container
            limits:
              cpu: "1" # Limit of CPU for the container
              memory: "2Gi" # Limit of memory for the container
      volumes:
        - name: redis-volume
          persistentVolumeClaim:
            claimName: redis-pvc # Claim the PVC for the deployment
