kubernetes/auth-service.service.yaml
# Service to expose the auth-service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      protocol: TCP
      port: 8080 # HTTP
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 8090 # gRPC
      targetPort: 8090
  type: LoadBalancer # Use LoadBalancer to expose externally
