kubernetes/postgres01.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres01
spec:
  selector:
    app: postgres01
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
