kubernetes/postgres02.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres02
spec:
  selector:
    app: postgres02
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
