kubernetes/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: manage-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manage-service
                port:
                  number: 8080
    - host: auth-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
    - host: transaction-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8080
